--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,5 +7,9 @@ body{
 	background-image: url(../img/1.jpg);
 	width: 1000px;
 	height: 1000px;
-	
+	transform:rotate(45deg);
+}
+
+#aaaaaaaaa{
+	background: border-box;
 }
